# matque

./: .gitignore  AUTHORS.rst  README.md  pyproject.toml  requirements.txt  setup.py
matque/: executor.py  mathq.py
matque/core/: __init__.py  objects.py  parser.py
matque/debug/: errors.py
matque/engine/: core.py  numerics.py  operators.py  variables.py
matque/expressions/: __init__.py  polynomials.py
matque/generator/: __init__.py  polynomials.py
tests/debug/: test_errors.py
tests/engine/: test_operators.py
