[tool.poetry]
name = "matque"
version = "0.1.0"
description = "Library to generate mathematics questions for various topics with solutions."
authors = ["Brian Welman <brianallisterwelman@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
